--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+@theme {
+  --color-ironRed: #8B322C;
+  --color-ironRust: #A64B2A;
+  --color-forestGreen: #4F6F52;
+  --color-wheat: #E5CDA7;
+  --color-sandstone: #D6AD60;
+}
+
 body {
   font-family: 'Georgia', serif;
 }
