Update homepage colors and layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
   --color-forestGreen: #4F6F52;
   --color-wheat: #E5CDA7;
   --color-sandstone: #D6AD60;
+  --color-lightBeige: #FAF2E7;
 }
 
 body {
