--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,7 @@ import "../styles/global.css";
     <title>Old Town Cheese</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="bg-forestGreen text-wheat font-serif">
+  <body class="bg-lightBeige text-stone-700 font-serif">
     <header class="bg-ironRed text-sandstone py-6 px-4 shadow">
       <div class="max-w-4xl mx-auto flex flex-col md:flex-row justify-between items-center">
         <h1 class="text-3xl font-bold">Old Town Cheese</h1>
